istio/sample-caller-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-caller-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-caller
spec:
  hosts:
    - "*"
  gateways:
    - sample-caller-gateway
  http:
    - route:
        - destination:
            host: sample-caller
            port:
              number: 8080
